{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "bc666f94-be7a-4761-801f-cb3c3b8e00f6",
            "actions": [
                {
                    "name": "ViewAxis_Move",
                    "type": "Value",
                    "id": "a8a36317-4617-4a18-9530-106bdf01769f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "87c0e98c-a2b4-48cb-ad4d-fe48c95eeded",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tilt",
                    "type": "Value",
                    "id": "81012be5-2c57-4181-81e1-638ce8ff1bdb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftThumb",
                    "type": "Value",
                    "id": "36f2fedd-d95e-4aba-81b4-00ec6fcf91d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightThumb",
                    "type": "Value",
                    "id": "b317bc40-0ac7-4bbc-b0e4-bbce9c79173c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "027b8c48-a3d2-40b3-9767-d7dbb5fd3980",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "ViewAxis_Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b272c94-38f0-412c-b03d-f8ade87ad24b",
                    "path": "<XInputController>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7fdc811-eab8-41a9-a986-cebb75d5fe30",
                    "path": "<XInputController>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Tilt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4d53b92-23cd-4d6e-8454-d8274f7f3d05",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "LeftThumb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d894d3ec-da0c-48f1-8c1d-25783dccf71b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightThumb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox Control Scheme",
            "bindingGroup": "Xbox Control Scheme",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}